Fixed speaker title so it's no longer hidden by ellipsis

--- a/src/styles/Components.scss
+++ b/src/styles/Components.scss
@@ -1205,9 +1205,9 @@
 
 .single-speakers-card p {
    position: relative;
-   overflow: hidden;
-   text-overflow: ellipsis;
-   display: -webkit-box;
+   /*overflow: hidden;*/
+   /*text-overflow: ellipsis;*/
+   /*display: -webkit-box;*/
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
    line-clamp: 1;
